tests/ui/end-after-operator.stderr
error: unexpected end of input
 --> tests/ui/end-after-operator.rs:3:1
  |
3 | #[efg(unix ||)]
  | ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `efg` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected an identifier
 --> tests/ui/end-after-operator.rs:6:15
  |
6 | #[efg((unix ||) && window)]
  |               ^
